@@ -29,7 +29,7 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
    )
 Depends: R (>= 3.0.0), grDevices, utils, splines
 Imports: tcltk, tcltk2 (>= 1.2-6)
-Suggests: abind, aplpack, car (>= 2.0-21), colorspace, effects (>= 2.3-0), e1071, foreign, grid, Hmisc, knitr, lattice, leaps, lmtest, markdown, MASS, mgcv, multcomp (>= 0.991-2), nlme, nnet, relimp, RcmdrMisc, rgl, rJava, RODBC, sem (>= 2.1-1) 
+Suggests: abind, aplpack, car (>= 2.0-21), colorspace, effects (>= 2.3-0), e1071, foreign, grid, Hmisc, knitr, lattice, leaps, lmtest, markdown, MASS, mgcv, multcomp (>= 0.991-2), nlme, nnet, relimp, RcmdrMisc (>= 1.0-1), rgl, rJava, RODBC, sem (>= 2.1-1) 
 ByteCompile: yes
 Description:
   A platform-independent basic-statistics GUI (graphical user interface) for R, based on the tcltk package.
